fixed broken css from last deliver

--- a/PSMasterMind/app/styles/less/_index.less
+++ b/PSMasterMind/app/styles/less/_index.less
@@ -138,14 +138,13 @@ header {
       }
     }
   }
-}
 
-div{
-  &.active {
+  div.active {
     background-color: @ps-secondary-blue;
     height: 18px;
   }
 }
+
 
 main {
   overflow: hidden;
